--- a/index.css
+++ b/index.css
@@ -29,3 +29,15 @@ img {
     height: 40px;
     padding-top: 74vh;
 }
+#myContainer {
+    width: 400px;
+    height: 400px;
+    position: relative;
+    background: yellow;
+  }
+#myAnimation {
+    width: 100px;
+    height: 100px;
+    position: absolute;
+   
+  }
