--- a/index.css
+++ b/index.css
@@ -9,6 +9,7 @@ body {
     height:80vh;
     background-color: yellow;
     overflow: auto;
+    position: relative;
 }
 
 .floor {
@@ -24,7 +25,7 @@ body {
     background-color: black;
 }
 
-img {
+.galaxys {
     width: 40px;
     height: 40px;
     padding-top: 74vh;
@@ -35,9 +36,13 @@ img {
     position: relative;
     background: yellow;
   }
+
 #myAnimation {
-    width: 100px;
-    height: 100px;
+    
     position: absolute;
    
   }
+#stars{
+    width: 100px;
+    height: 100px; 
+}
