--- a/index.css
+++ b/index.css
@@ -5,6 +5,7 @@ body {
 }
 
 .container {
+    display: flex;
     width: 100vw;
     height:80vh;
     background-color: yellow;
@@ -46,6 +47,7 @@ body {
 #stars{
     width: 100px;
     height: 100px; 
+    
 }
 
 #db-level {
