--- a/index.css
+++ b/index.css
@@ -45,10 +45,11 @@ body {
    
   }
 #stars{
-    width: 100px;
-    height: 100px; 
+    width: 55px;
+    height: 55px; 
     position: absolute;
-    margin-right: 10px;
+    right: 0;
+    
 }
 
 #db-level {
