--- a/index.css
+++ b/index.css
@@ -2,6 +2,8 @@ body {
     margin: 0;
     height: 100vh;
     width: 100vw;
+    overflow: hidden;
+    position: relative;
 }
 
 .container {
@@ -49,6 +51,7 @@ body {
     height: 55px; 
     position: absolute;
     right: 0;
+    pointer-events: none;
     
 }
 
