--- a/index.css
+++ b/index.css
@@ -30,9 +30,12 @@ body {
 
 .galaxys {
     width: 40px;
-    height: 100px;
-    
+    height: 170px;
     position: absolute
+}
+#galax{
+    top: 0px;
+    
 }
 
 #myContainer {
